k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warehouse
  labels:
    app.kubernetes.io/managed-by: kubectl

# jak "folder" w Kubernetes — wszystkie komponenty 
# siedzą w przestrzeni nazw "warehouse" żeby nie mieszały się
# z innymi aplikacjami na tym samym klastrze
