k8s/ingress.yaml
#Bramka wejściowa — jedyne miejsce przez które wchodzi ruch z zewnątrz:
# /api/* - kieruj do backend-service
# /* - kieruj do frontend-service


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-ingress
  namespace: warehouse
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: warehouse.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: auth.warehouse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
